# panoply

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
.charlie/: instructions
.github/workflows/: ci.yml
.prompts/fa-categorize/: 1.md  2.md
docs/: architecture.md  contributing.md  financial_analysis_ctv.md
financial_analysis/: __init__.py  api.py  cli.py  models.py  openai_client.py  prompting.py
libs/db/: README.md  alembic.ini  pyproject.toml
libs/db/alembic/: env.py
libs/db/alembic/versions/: 0001_fa_core.py  0002_fa_refund_pairs.py  0002_taxonomy_two_level.py  0003_tx_display_name.py  0004_tx_merchant_norm.py
libs/db/src/db/: __init__.py  client.py
libs/db/src/db/models/: __init__.py  finance.py
libs/pmap/: pyproject.toml
libs/pmap/src/: pmap.py
plans/: ai-read-later-app.md  amazon-reconciliation.md  financial_analysis_architecture_map.md  financial_analysis_requirements.md
scripts/: bootstrap.sh  run-api.sh  run-cli.sh
tests/: conftest.py  test_api_categorize_expenses.py  test_normalizers_snapshots.py  test_term_ui_select_category.py
tests/data/: amex_aug_24_29_2025_subset.csv
tests/e2e/: test_review_flow_from_csv_e2e.py
tests/helpers/: db.py  openai_stub.py
