[project]
name = "db"
version = "0.0.0"
description = "Shared database library for the Panoply workspace (SQLAlchemy, Alembic, Supabase)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "SQLAlchemy>=2.0",
  "alembic>=1.14",
  "supabase>=2",
]

[project.urls]
Homepage = "https://github.com/adambossy/panoply"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
