[project]
name = "db"
version = "0.0.0"
description = "Shared database library for the Panoply workspace (SQLAlchemy, Alembic, Supabase)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "SQLAlchemy>=2.0",
  "alembic>=1.14",
  "psycopg[binary]>=3,<4",
  "supabase>=2,<3",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3,<4",
]

[project.urls]
Homepage = "https://github.com/adambossy/panoply"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "alembic.ini",
  "alembic/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
