[project]
name = "pmap"
version = "0.0.0"
description = "Bounded-concurrency mapping helper for Panoply (ThreadPoolExecutor wrapper)."
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pmap"]
